[tool.poetry]
name = "conversational-ai-helper-tools"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
